--- a/broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -33,13 +33,13 @@
 	<div class="da-slide second">
 	    <div class="text">
 	        <div class="da-img">
-                <img class="broccoli" src="@Url.Content("~/Content/img/for-video/10.jpg")"/>
+                <img class="broccoli" src="@Url.Content("~/Content/img/for-video/10.jpg")" onclick="$('#presentationVideo').click();"/>
             </div>
 	        <h2>Автоматизированные торговые системы для рынка форекс.</h2>
 	        <p>
 	            Уже через год успешной торговли все ваши мечты исполнятся!
 	            <br/>
-	            <a class="various fancybox.iframe btn" title="The Falltape" href="http://www.youtube.com/embed/J75OLtizYag?fs=1&amp;vq=hd720;autoplay=1">
+	            <a id="presentationVideo" class="various fancybox.iframe btn" title="Презентация" href="http://www.youtube.com/embed/x_hWObWCxsA?fs=1&amp;vq=hd720;autoplay=1">
 	                <span>Подробнее</span>
 	            </a>
 	        </p>
