--- a/broccoli/BroccoliMvc/Views/Home/BroccoliOffer.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/BroccoliOffer.cshtml
@@ -26,7 +26,7 @@
         <div class="offer-text">Торгуйте при помощи наших советников с возможностью выставления риска.</div>
     </div>
     <div class="hr-shadow calculator-container">
-        <h4>Калькулятор</h4>
+        <h4>Наращивайте капитал. Калькулятор</h4>
         <table id="calculator" class="calculator grid">
             <thead>
                 <th>Введите сумму начальной инвестиции, $</th>
