--- a/broccoli/BroccoliMvc/Views/Admin/Index.cshtml
+++ b/broccoli/BroccoliMvc/Views/Admin/Index.cshtml
@@ -12,4 +12,5 @@
 <div class="center-content admin">
     <a href="@Url.Action("CommentsPanel", "Admin")">Комментарии</a>
     <a href="@Url.Action("Users", "Admin")">Пользователи</a>
+    <a href="@Url.Action("SendEmails", "Admin")">Рассылки</a>
 </div>
