--- a/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/_LayoutMin.cshtml
@@ -7,6 +7,9 @@
     <link href="@Url.Content("~/Content/support/index.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/support/green.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/themes/jquery-ui/jquery-ui-1.9.2.custom.css")" rel="stylesheet" />
+    <link rel="stylesheet" href="@Url.Content("~/Content/themes/fancybox/jquery.fancybox-buttons.css")">
+    <link rel="stylesheet" href="@Url.Content("~/Content/themes/fancybox/jquery.fancybox-thumbs.css")">
+    <link rel="stylesheet" href="@Url.Content("~/Content/themes/fancybox/jquery.fancybox.css")">
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
     <script src="@Url.Content("~/Scripts/Main/main.js")" type="text/javascript"></script>
