--- a/broccoli/BroccoliMvc/Views/Home/BroccoliOffer.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/BroccoliOffer.cshtml
@@ -3,6 +3,16 @@
     Layout = "~/Views/Shared/_LayoutMin.cshtml";
 }
 
+@section head {
+    <!-- FancyBox -->
+	<script src="@Url.Content("~/Scripts/fancybox/jquery.fancybox.js")"></script>
+	<script src="@Url.Content("~/Scripts/fancybox/jquery.fancybox-buttons.js")"></script>
+	<script src="@Url.Content("~/Scripts/fancybox/jquery.fancybox-thumbs.js")"></script>
+    <script src="@Url.Content("~/Scripts/fancybox/jquery.easing-1.3.pack.js")"></script>
+    <script src="@Url.Content("~/Scripts/fancybox/jquery.mousewheel-3.0.6.pack.js")"></script>
+    <script src="@Url.Content("~/Scripts/vk_up_button/button.js")"></script>
+}
+
 <div class="banner small">
     <div class="action">
         <font>Предложение Брокколи</font>
@@ -275,6 +285,21 @@
                 <a class="signup" href="@Url.Action("MaxTrade", "Home")">Подробнее</a>        
             </div>	
         </div>
+        <h3>Схема работы. Видео инструкция:</h3>
+            <div class="gal">
+                <a class="various fancybox.iframe" title="Шаг №1. Регистрация на Broccoli-Trade" href="http://www.youtube.com/embed/bivoKhBFAs0?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/1.jpg")"></a>
+                <a class="various fancybox.iframe" title="Шаг №2. Открытие счета на ForexInn" href="http://www.youtube.com/embed/G956oyXPvTw?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/2.jpg")"></a>
+                <a class="various fancybox.iframe" title="Шаг №3. Активация счета на Broccoli-Trade" href="http://www.youtube.com/embed/9vaRA195G-o?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/3.jpg")"></a>
+                <a class="various fancybox.iframe" title="Шан №4. Заказ советника для торгового счета" href="http://www.youtube.com/embed/_KAU61fomhs?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/4.jpg")"></a>
+                <a class="various fancybox.iframe" title="Шаг №5. Установка терминала MetaTrader" href="http://www.youtube.com/embed/y0s_AXZlXQg?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/5.jpg")"></a>
+                <a class="various fancybox.iframe" title="Шаг №6. Установка и запуск советника" href="http://www.youtube.com/embed/v4i2j1WcsNo?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/6.jpg")"></a>
+                <a class="various fancybox.iframe" title="Шаг №7. Открытие демо-счета" href="http://www.youtube.com/embed/StVH_JTqi7k?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/7.jpg")"></a>
+                <a class="various fancybox.iframe" title="Шаг №8. Заказ советника для демо-счета" href="http://www.youtube.com/embed/xy-VBXeMW-w?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/8.jpg")"></a>
+                <a class="various fancybox.iframe" title="Шаг №9. Заказ и использование VPS сервера" href="http://www.youtube.com/embed/J75OLtizYag?fs=1&amp;vq=hd720;autoplay=1;rel=0"><img src="@Url.Content("~/Content/img/for-video/10.jpg")"></a>
+            </div>
+            <span class="button">
+                <a href="@Url.Action("RegisterForm", "Account")" target="_blank"><input id="regLink" class="large" type="button" value="Регистрация" /></a>
+            </span>
     </div>
 </div>
 <script type="text/javascript" src="@Url.Content("~/Scripts/Main/broccoli.offer.js")"></script>
