--- a/broccoli/BroccoliMvc/Views/Admin/NewMail.cshtml
+++ b/broccoli/BroccoliMvc/Views/Admin/NewMail.cshtml
@@ -23,7 +23,9 @@
 <script type="text/javascript"> document.SaveMail = '@Url.Action("SaveMail", "Admin")'</script>
 <script type="text/javascript">
     jQuery(document).ready(function () {
-        CKEDITOR.replace('ckeditor', {});
+        CKEDITOR.replace('ckeditor', {
+            height: '500px'
+        });
 
         $('#saveMail').click(function () {
             if (CKEDITOR.instances.ckeditor.getData() != "") {
