--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/CabinetMenu.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/CabinetMenu.cshtml
@@ -4,7 +4,8 @@
         </li>
         <li><a href="#">Счета</a>
             <ul>
-                <li><a href="http://www.forexinn.ru/register/a/broccoli">Открыть счет</a></li>
+                <li><a href="http://www.forexinn.ru/register/a/broccoli">Открыть счет Forexinn</a></li>
+                <li><a href="https://secure.instaforex.com/open-account.aspx?lang=ru&x=broccoli">Открыть счет Instaforex</a></li>
                 <li><a href="@Url.Action("ActivateAccount", "PersonalCabinet")">Активировать счет</a></li>
                 <li><a href="@Url.Action("AccountStatus", "PersonalCabinet")">Статус счетов</a></li>
             </ul>
