--- a/broccoli/BroccoliMvc/Views/Shared/MainMenu.cshtml
+++ b/broccoli/BroccoliMvc/Views/Shared/MainMenu.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="main-menu">
     <div class="menu">
         <div><a href="@Url.Action("BroccoliOffer", "Home")">Предложение Брокколи</a></div>
-        <div><a href="@Url.Action("BrokerInfo", "Home")">Брокер ForexInn</a></div>
+        <div><a href="@Url.Action("BrokerInfo", "Home")">Брокеры</a></div>
         <div><a href="@Url.Action("VPS", "Home")">Торгуй круглосуточно</a></div>
         <div class="last"><a href="@Url.Action("ContactUs", "Home")">Свяжитесь с нами</a></div>
     </div>
