--- a/broccoli/BroccoliMvc/Views/PersonalCabinet/ActivateAccount.cshtml
+++ b/broccoli/BroccoliMvc/Views/PersonalCabinet/ActivateAccount.cshtml
@@ -28,6 +28,15 @@
                     <td class="inputs">
                         @Html.TextBox("account")
                     </td>
+                    <td class="labels" style="text-align: right; width: 100px; padding-right: 20px;">
+                        <label>Брокер:</label>
+                    </td>
+                    <td class="inputs">
+                        <select id="broker" name="broker" style="height: 36px;">
+                            <option value="1">Forexinn</option>
+                            <option value="2">Instaforex</option>
+                        </select>
+                    </td>
                 </tr>
                 <tr>
                     <td></td>
