--- a/broccoli/BroccoliMvc/Views/Admin/SendEmailsPanel.cshtml
+++ b/broccoli/BroccoliMvc/Views/Admin/SendEmailsPanel.cshtml
@@ -62,4 +62,7 @@
             }
         </tbody>
     </table>
+    <span id="writeMail" class="button write-mail">
+        <a href="@Url.Action("WriteMailForm", "Admin")"><input class="large" type="button" value="Написать письмо" style="margin-top: 30px;margin-left: 30px;" /></a>
+    </span>
 </div>
