--- a/broccoli/BroccoliMvc/Content/Site.css
+++ b/broccoli/BroccoliMvc/Content/Site.css
@@ -1711,6 +1711,20 @@ footer#main{
     width: 590px;
     text-align: justify;
     color: rgb(77, 77, 77);
+    position: relative;
+}
+
+.center-content .about-forex #proof {
+    margin-left: 400px;
+    width: 500px;
+    margin-top: 100px;
+    margin-bottom: 70px;
+}
+
+.center-content .about-forex #proof-img {
+    position: absolute;
+    top: 100px;
+    left: -35px;
 }
 
 .center-content .about-forex .about-forex-text a {
