--- a/broccoli/BroccoliMvc/Views/Home/PAMM.cshtml
+++ b/broccoli/BroccoliMvc/Views/Home/PAMM.cshtml
@@ -114,6 +114,20 @@
             </span>
             <span>Партнерский код: <font>broccoli</font></span>
         </div>
+        <div class="broker" style="margin-top: 10px;">
+            <img src="@Url.Content("~/Content/img/2_30.jpg")" style="margin-left: 115px; margin-top: 31px;" />
+            <span class="button">
+                <a href="http://fx-trend.com/new/home?agent=588607" target="_blank"><input class="large" type="button" value="Открыть ПАММ-счет" /></a>
+            </span>
+            <span>Партнерский код: <font>broccoli</font></span>
+        </div>
+        <div class="broker" style="margin-top: 10px;">
+            <img src="@Url.Content("~/Content/img/panteon_logo.jpg")" style="margin-left: 114px; margin-top: 10px;" />
+            <span class="button">
+                <a href="http://panteon-finance.com/newMember/7138.html" target="_blank"><input class="large" type="button" value="Открыть ПАММ-счет" /></a>
+            </span>
+            <span>Партнерский код: <font>broccoli</font></span>
+        </div>
     </div>
     @*<div class="panel about-forex" style="height: 300px;">
         <img class="garanted" src="@Url.Content("~/Content/img/TwoGuarantees.png")"/>
