--- a/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -16,6 +16,8 @@
     <script type="text/javascript" src="@Url.Content("~/Scripts/slider/jquery-easing.1.2.pack.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.flexslider-min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.lwtCountdown-0.9.5.js")"></script>
+    <meta property="fb:app_id" content="494080814037150" />
+    <meta property="fb:admins" content="100002476403510" />
 }
 
 <div id="fb-root"></div>
@@ -24,7 +26,7 @@
     var js, fjs = d.getElementsByTagName(s)[0];
     if (d.getElementById(id)) return;
     js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1";
+    js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1&appId=494080814037150";
     fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
