--- a/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -16,8 +16,8 @@
     <script type="text/javascript" src="@Url.Content("~/Scripts/slider/jquery-easing.1.2.pack.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.flexslider-min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.lwtCountdown-0.9.5.js")"></script>
-    <meta property="fb:app_id" content="494080814037150" />
-    <meta property="fb:admins" content="100002476403510" />
+    @*<meta property="fb:app_id" content="494080814037150" />
+    <meta property="fb:admins" content="100002476403510" />*@
 }
 
 <div id="fb-root"></div>
