добавил Саню в админи фб

--- a/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.flexslider-min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.lwtCountdown-0.9.5.js")"></script>
     <meta property="fb:admins" content="100002476403510" />
+    <meta property="fb:admins" content="100001451163492" />
 }
 
 <div id="fb-root"></div>
