--- a/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -130,10 +130,10 @@
         </div>
         <div class="panel about-forex" style="height: 300px;">
             <img class="garanted" src="@Url.Content("~/Content/img/TwoGuarantees.png")" />
-            <h4 style="margin-left: 315px;width: 565px;margin-top: 75px;">Мы гарантируем что Вы в первый месяц заработаете хотя бы по одному из инструментов минимум 2.9%.</h4>
+            <h4 style="margin-left: 315px;width: 565px;margin-top: 75px;">Мы гарантируем, что Вы в первый месяц заработаете, хотя бы по одному из инструментов, минимум 2.9%.</h4>
         </div>
         <div class="panel about-forex">
-            <h4>Если Вы зарегистрируетесь прямо сейчас то бесплатно узнаете ещё 2 бонусных инвестиционных инструмента</h4>
+            <h4>Если Вы зарегистрируетесь прямо сейчас, то бесплатно узнаете ещё 2 бонусных инвестиционных инструмента</h4>
             <div id="countdown_dashboard">
                 <div class="dash months_dash">
                     <span class="dash_title">месяцев</span>
